--- a/linux-surface/PKGBUILD
+++ b/linux-surface/PKGBUILD
@@ -12,7 +12,7 @@ arch=("aarch64")
 options=("!strip")
 makedepends=('xmlto' 'docbook-xsl' 'kmod' 'inetutils' 'bc' 'git' 'dtc')
 
-_ref_ksource="342928fbe24993b996416b0c3cc731b88593476a"
+_ref_ksource="1b7bc6e0d99b53bd89f39a331b8bfbcf464a4ce2"
 
 
 source=(
@@ -39,11 +39,12 @@ prepare() {
     # add mix2s patch
     # echo "Add mix2s.patch"
     # pwd
-    # git am ../../../MI8-dipper.patch
-    # git am ../../../nfc.patch
+    patch -p1 < ../../../MI8-dipper.patch
+    patch -p1 < ../../../nfc.patch
     make ARCH=arm64 defconfig sdm845.config
     # add mix2s panel driver
-    # sed -i "s/^.*CONFIG_DRM_PANEL_JDI_NT35596S.*$/CONFIG_DRM_PANEL_JDI_NT35596S=y/" .config
+    sed -i "s/^.*CONFIG_DRM_PANEL_JDI_NT35596S.*$/CONFIG_DRM_PANEL_JDI_NT35596S=y/" .config
+    sed -i "s/^.*CONFIG_SND_SOC_TAS2559.*$/CONFIG_SND_SOC_TAS2559=m/" .config
 }
 
 build() {
