--- a/linux-surface/PKGBUILD
+++ b/linux-surface/PKGBUILD
@@ -41,6 +41,7 @@ prepare() {
     # pwd
     patch -p1 < ../../../MI8-dipper.patch
     patch -p1 < ../../../nfc.patch
+    patch -p1 < ../../../0001-readd-tas2559-in-dts.patch
     make ARCH=arm64 defconfig sdm845.config
     # add mix2s panel driver
     sed -i "s/^.*CONFIG_DRM_PANEL_JDI_NT35596S.*$/CONFIG_DRM_PANEL_JDI_NT35596S=y/" .config
